--- a/src/styles/components/demo.css
+++ b/src/styles/components/demo.css
@@ -1,11 +1,39 @@
 .demo {
   display: flex;
+  flex-flow: column;
   justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 40px;
   height: 100vh;
 
-  > * {
-    width: 160px;
+  section[role="group"] {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    gap: 12px;
+    border: 2px solid rgba(var(--color-gray-300));
+    padding: 16px;
+    border-radius: 8px;
+  }
+
+  .switch-list {
+    list-style: '';
+    margin-block: 0;
+    padding-inline-start: 0;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    gap: 4px;
+  }
+
+  .font-size-control {
+    margin-block: 0;
+    font-size: 14px;
+  }
+
+  .chip-list {
+    display: flex;
+    gap: 4px;
+    padding: 6px;
   }
 }
