--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,8 @@
-@layer config, base, components;
+@layer config, base, components, utilities;
 @import './config.css' layer(config);
 @import './base/normalize.css' layer(base);
 @import './base/base.css' layer(base);
 @import './components/demo.css' layer(components);
 @import './components/switch.css' layer(components);
+@import './components/chip.css' layer(components);
+@import './utilities/a11y.css' layer(utilities);
