[구현] 컴포넌트, 디자인 핸드오프 페이지 내비게이션

--- a/src/styles/components/demo.css
+++ b/src/styles/components/demo.css
@@ -1,10 +1,10 @@
 .demo {
   display: flex;
   flex-flow: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   gap: 40px;
-  height: 100vh;
+  margin-block-start: 20px;
 
   section[role="group"] {
     display: flex;
